--- a/sass/bais/_variables.scss
+++ b/sass/bais/_variables.scss
@@ -1,9 +1,16 @@
-:root {
-    --main: #ffffff;
-    --title: #292f36;
-    --text: #4d5053;
-    --rare: #cda274;
-    --background: #f4f0ec;
-    --border-item: #e7e7e7;
-    --border: #e5e5e5;
-  }
+// :root {
+//     --main: #ffffff;
+//     --title: #292f36;
+//     --text: #4d5053;
+//     --rare: #cda274;
+//     --background: #f4f0ec;
+//     --border-item: #e7e7e7;
+//     --border: #e5e5e5;
+//   }
+  $main: #ffffff;
+  $title: #292f36;
+  $text: #4d5053;
+  $rare: #cda274;
+  $background: #f4f0ec;
+  $border-item: #e7e7e7;
+  $border: #e5e5e5;
