--- a/sass/section/_blogs.scss
+++ b/sass/section/_blogs.scss
@@ -14,7 +14,7 @@
     width: 1220px;
   }
   .blog-title {
-    color: var(--title);
+    color: $title;
     text-align: center;
     font-family: "DM Serif Display";
     font-size: 48px;
@@ -24,7 +24,7 @@
     margin-bottom: 21px;
   }
   .blog-text {
-    color: var(--text);
+    color: $text;
     text-align: center;
     font-size: 22px;
     font-weight: 400;
@@ -40,10 +40,10 @@
     padding: 21px 21px 40.59px 21px;
     flex-basis: calc((100% - 40px) / 3);
     border-radius: 62px;
-    border: 1px solid var(--border-item);
+    border: 1px solid $border-item;
   }
   .blogs-text {
-    color: var(--main);
+    color: $main;
     font-size: 15px;
     font-weight: 400;
     line-height: 1.5;
@@ -51,7 +51,7 @@
     padding: 232px 206px 40px 34px;
   }
   .blogs-title {
-    color: var(--title);
+    color: $title;
     font-family: "DM Serif Display";
     font-size: 25px;
     font-weight: 400;
@@ -94,7 +94,7 @@
   }
   
   .blogs-world {
-    color: var(--text);
+    color: $text;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
@@ -105,6 +105,6 @@
     height: 52px;
     flex-shrink: 0;
     border-radius: 100px;
-    background: var(--background);
+    background: $background;
     border: none;
   }
