--- a/sass/section/_hero.scss
+++ b/sass/section/_hero.scss
@@ -8,7 +8,7 @@
   }
   .hero-title {
     width: 595px;
-    color: var(--title);
+    color: $title;
     font-family: "DM Serif Display";
     font-size: 80px;
     font-weight: 400;
@@ -17,7 +17,7 @@
   }
   .hero-text {
     margin-top: 19px;
-    color: var(--text);
+    color: $text;
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -25,12 +25,12 @@
   }
   .hero-button {
     margin-top: 57px;
-    color: var(--main);
+    color: $main;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.72px;
     padding: 22px 67px 22px 34px;
-    background-color: var(--title);
+    background-color: $title;
     border-radius: 18px;
   }
