--- a/sass/section/_information.scss
+++ b/sass/section/_information.scss
@@ -11,7 +11,7 @@
     width: 400px;
   }
   .information-title {
-    color: var(--title);
+    color: $title;
     text-align: center;
     font-family: "DM Serif Display";
     font-size: 25px;
@@ -20,7 +20,7 @@
     letter-spacing: 0.22px;
   }
   .information-text {
-    color: var(--text);
+    color: $text;
     text-align: center;
     font-size: 22px;
     font-weight: 400;
@@ -28,8 +28,8 @@
     letter-spacing: 0.22px;
   }
   .information-button {
-    background-color: var(--main);
-    color: var(--text);
+    background-color: $main;
+    color: $text;
     text-align: center;
     font-family: Jost;
     font-size: 18px;
