--- a/sass/section/_projects.scss
+++ b/sass/section/_projects.scss
@@ -8,7 +8,7 @@
   }
   .project-title {
     margin-bottom: 20px;
-    color: var(--title);
+    color: $title;
     text-align: center;
     font-family: "DM Serif Display";
     font-size: 47px;
@@ -21,7 +21,7 @@
     line-height: 1.5625;
   }
   .project-text {
-    color: var(--text);
+    color: $text;
     text-align: center;
     font-size: 22px;
     font-weight: 400;
@@ -69,7 +69,7 @@
     align-items: flex-start;
   }
   .projects-title {
-    color: var(--title);
+    color: $title;
     font-family: "DM Serif Display";
     font-size: 24px;
     font-weight: 400;
@@ -77,7 +77,7 @@
     letter-spacing: 0.22px;
   }
   .projects-text {
-    color: var(--text);
+    color: $text;
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -88,6 +88,6 @@
     height: 70px;
     flex-shrink: 0;
     border-radius: 100px;
-    background: var(--background);
+    background: $background;
     border: none;
   }
