--- a/sass/section/_review.scss
+++ b/sass/section/_review.scss
@@ -9,7 +9,7 @@
     padding-bottom: 120.39px;
     padding-top: 103px;
     border-radius: 70px;
-    background: var(--background);
+    background: $background;
   }
   .reviews-box {
     display: flex;
@@ -26,7 +26,7 @@
     height: 77px;
   }
   .review-title {
-    color: var(--title);
+    color: $title;
     text-align: center;
     font-family: "DM Serif Display";
     font-size: 45px;
@@ -47,10 +47,10 @@
   .reviews-item {
     padding: 49.61px 30px 45px 35px;
     border-radius: 30px;
-    background: var(--main);
+    background: $main;
   }
   .reviews-title {
-    color: var(--title);
+    color: $title;
     font-family: "DM Serif Display";
     font-size: 25px;
     font-weight: 400;
@@ -58,14 +58,14 @@
     letter-spacing: 0.22px;
   }
   .reviews-subtitle {
-    color: var(--text);
+    color: $text;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.22px;
   }
   .reviews-text {
-    color: var(--text);
+    color: $text;
     font-size: 20px;
     font-weight: 400;
     line-height: 1.5;
