--- a/style/main.css
+++ b/style/main.css
@@ -36,42 +36,37 @@ body {
   padding-top: 26px;
   padding-bottom: 18px;
 }
-
-.header-box {
+.header__box {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
-.nav-list {
+.header__list {
   display: flex;
   height: 62px;
   justify-content: flex-end;
   align-items: center;
   gap: 40px;
 }
-
-.nav-item {
+.header__item {
   color: #292f36;
   font-size: 20px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.4px;
 }
-
-.nav-item:nth-child(1) {
+.header__item:nth-child(1) {
   color: #cda274;
 }
 
-.main-hero {
+.main {
   padding-top: 195px;
   padding-bottom: 250px;
   background-image: url(../img/backgroundhero.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-.hero-title {
+.main__title {
   width: 595px;
   color: #292f36;
   font-family: "DM Serif Display";
@@ -80,8 +75,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.22px;
 }
-
-.hero-text {
+.main__text {
   margin-top: 19px;
   color: #4d5053;
   font-size: 22px;
@@ -89,8 +83,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.22px;
 }
-
-.hero-button {
+.main__button {
   margin-top: 57px;
   color: #ffffff;
   font-size: 18px;
@@ -100,6 +93,9 @@ body {
   padding: 22px 67px 22px 34px;
   background-color: #292f36;
   border-radius: 18px;
+}
+.main__button:hover {
+  background-color: #cda274;
 }
 
 .main-information {
