--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./bais/container";
 @import "./bais/variables";
 @import "./bais/common";
+@import "./utils/mixin";
 @import "./section/header";
 @import "./section/hero";
 @import "./section/information";
