--- a/sass/section/_blogs.scss
+++ b/sass/section/_blogs.scss
@@ -1,14 +1,14 @@
-
 .main-blogs {
     padding-top: 130px;
   }
   .blogs-div {
-    display: flex;
     padding-top: 15px;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 70px;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-end;
+    // align-items: center;
+    // gap: 70px;
+    @include flex-box($justify:flex-end, $direction:column, $gap:70px);
   }
   .blogs-box {
     width: 1220px;
@@ -32,9 +32,10 @@
     letter-spacing: 0.22px;
   }
   .blogs-list {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
+    // display: flex;
+    // gap: 20px;
+    // flex-wrap: wrap;
+    @include flex-box($gap:20px);
   }
   .blogs-item {
     padding: 21px 21px 40.59px 21px;
@@ -61,10 +62,11 @@
     margin-bottom: 10.41px;
   }
   .blog-div {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 149px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // gap: 149px;
+    @include flex-box($gap:149px);
   }
   .blogs-kitdes {
     background-image: url(../img/kitchendesign.png);
